# dataframe_aggregator

./: .gitignore  LICENSE  README.md  setup.cfg
Tests/: test_aggregation.py
src/dataframe_aggregator/: aggregator.py
src/dataframe_aggregator/test/: toy_data_generator.py
