[metadata]
name = dataframe_aggregator-MaxOliveberg
version = 0.1.0
author = Max Oliveberg
author_email = max.oliveberg@gmail.com
description = Average .csv files
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/MaxOliveberg/dataframe_aggregator
project_urls =
    Bug Tracker = https://github.com/MaxOliveberg/dataframe_aggregator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src